# nextgen-web-study

./: LICENSE  README.md  go.mod  go.sum  http3_capture.pcap  log.txt  main.go  router.rs  session  solver.py
gamblingdbg/: Cargo.toml  go.mod  main.go
gamblingdbg/src/: main.rs
ipspoofing-http3with0rtt/: spoof.py
replayattack-tls1.3with0rtt/demo/: main.rs
reqforgery-quic/: vnrf.py
smuggling-http3/: README.md  smuggling.py
toctou-http3streamquic/: README.md  go.sum  jp-free-31.protonvpn.udp.ovpn  main.go
toctou-http3streamquic/demo/: privkey.pem
toctou-http3streamquic/src_asli/: fullchain.pem
