[package]
name = "gamblingdbg"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
h3 = "0.0.7"
h3-quinn = "0.0.9"
http = "1.3.1"
quinn = "0.11.7"
rcgen = "0.13.2"
rustls = { version = "0.23.26", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
